<resources>
    <string name="app_name">News App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_data_found">No Data Found</string>
    <string name="topics_menu_item">Area of Interest(General Topic)</string>
    <string name="topics_general_default">Business</string>
    <string name="topics_general_key">Area</string>
    <string name="topics_search_terms_default">Apple</string>
    <string name="topics_search_item">Search Terms</string>
    <string name="topics_search_terms_key">Terms</string>




    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_by_default" translatable="false">6</string>


   <!--<string name="topics_of_interest_label">Topics Of Interest (select one)</string>
    <string name="topics_of_interest_key" translatable="false">Topics</string>
    <string name="topics_of_interest_default" translatable="false">@string/settings_order_by_magnitude_value</string>
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="sttings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>-->

</resources>
